--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 /* Soluzione ex-4 */
 .ex-4-square:hover{
     background-color:#f5f5f5;
-    
+
 }
 
 /* Esercizio-5 */
@@ -71,15 +71,53 @@
     transform: scale(0.9);
 }
 
-
+/* Esercizio-6-7-8  */
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
 
+/* Soluzione ex-6 */
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+
+/* Esercizio-7 */
+.ex-7-img{
+    transition: all 2s;
+}
+
+/* Soluzione ex-7 */
+.ex-7-img:hover{
+    filter: grayscale(40%) sepia(60%);
+    
+}
+
+/* Esercizio-8 */
+.ex-8-img{
+    transition: all 2s;
+}
+
+/* Soluzione ex-8 */
+.ex-8-img:hover{
+    filter: grayscale(40%) sepia(60%);
+    border-radius: 20px;
+
+}
+
+/* Esercizio-9 */
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: all 2s;
 }
+
+/* Soluzione ex-9 */
+.ex-9-img:hover{
+    filter: grayscale(40%) sepia(60%);
+    border-radius: 20px;
+    transform: scale(1.5);
+}
+
 .ex-10-icon {
     font-size: 60px;
 }
