--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@
     
 }
 
-
+/* Esercizio-12-13 */
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -173,6 +173,7 @@
     text-align: center;
     text-decoration: none;
 }
+
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
     top: -10px;
@@ -181,6 +182,7 @@
     width: 60px;
     height: 20px;
 }
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
@@ -189,3 +191,73 @@
     width: 60px;
     height: 20px;
 }
+
+
+/* Soluzione ex-12 */
+
+/* Btn-Top-White */
+.ex-12-button:hover .ex-12-top-white{
+    animation-name: top-white-move;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+
+}
+
+/* Btn-bottom-white  */
+.ex-12-button:hover .ex-12-bottom-white{
+    animation-name: bottom-white-move;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    
+
+}
+
+
+/* Top-White-Move */
+@keyframes top-white-move {
+    0%{
+        top: -10px;
+        left: 10% ;
+    }
+    
+   
+
+    50%{
+        top: -10px;
+        left: calc(100% - 60px);
+    }
+
+
+
+    100%{
+        top: -10px;
+        left: 10% ;
+    }
+    
+}
+
+/* Bottom-White-Move */
+@keyframes bottom-white-move {
+    0%{
+        bottom: -10px;
+        right: 20% ;
+    }
+    
+   
+
+    50%{
+        bottom: -10px;
+        right: calc(100% - 60px);
+    }
+
+
+    100%{
+        bottom: -10px;
+        right: 20% ;
+    }
+
+    
+}
+    
+
+
