--- a/style.css
+++ b/style.css
@@ -258,6 +258,85 @@
 
     
 }
+
+/* Soluzione ex-13 */
+
+/* Btn-Top-White */
+.ex-13-button:hover .ex-13-top-white{
+    animation-name: top-white-move2;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+
+}
+
+/* Btn-bottom-white  */
+.ex-13-button:hover .ex-13-bottom-white{
+    animation-name: bottom-white-move2;
+    animation-duration: 2s;
+    animation-timing-function: linear;
     
 
+}
 
+/* Top-White-Move */
+@keyframes top-white-move2 {
+    0%{
+        top: -10px;
+        left: 10% ;
+    }
+
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+    
+   
+}
+
+/* Bottom-White-Move */
+@keyframes bottom-white-move2 {
+    0%{
+        bottom: -10px;
+        right: 20% ;
+    }
+
+    30% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+    
+}
+
+    
